--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,19 @@
         </activity>
 
         <activity
+            android:name=".InfoActivity"
+            android:logo="@drawable/logo"
+            android:label="Info">
+        </activity>
+
+        <activity
+            android:name=".MyPageActivity"
+            android:logo="@drawable/logo"
+            android:label="마이페이지">
+
+        </activity>
+
+        <activity
             android:name=".SearchActivity"
             android:exported="true"
             android:logo="@drawable/logo"
@@ -43,7 +56,7 @@
         </activity>
 
         <activity
-            android:name=".WordDetail"
+            android:name=".WordDetailActivity"
             android:exported="true"
             android:logo="@drawable/logo"
             android:label="단어">
@@ -67,7 +80,7 @@
         </activity>
 
         <activity
-            android:name=".WordMore"
+            android:name=".WordMoreActivity"
             android:exported="true"
             android:logo="@drawable/logo"
             android:label="단어">
