--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,6 @@
         android:theme="@style/Theme.NewerDaang">
         <activity
             android:name=".MainActivity"
-            android:logo="@drawable/logo"
-            android:label="@string/app_name"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -27,28 +25,36 @@
 
         <activity
             android:name=".BookmarkActivity"
-            android:logo="@drawable/logo"
+            android:logo="@drawable/logo_circle"
             android:label="북마크">
 
         </activity>
 
         <activity
             android:name=".InfoActivity"
-            android:logo="@drawable/logo"
+            android:logo="@drawable/logo_circle"
             android:label="Info">
         </activity>
 
         <activity
             android:name=".MyPageActivity"
-            android:logo="@drawable/logo"
+            android:logo="@drawable/logo_circle"
             android:label="마이페이지">
 
         </activity>
 
         <activity
+            android:name=".RecentQuizActivity"
+            android:logo="@drawable/logo_circle"
+            android:label="최근 푼 퀴즈">
+
+        </activity>
+
+
+        <activity
             android:name=".SearchActivity"
             android:exported="true"
-            android:logo="@drawable/logo"
+            android:logo="@drawable/logo_circle"
             android:label="검색">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -60,7 +66,7 @@
         <activity
             android:name=".WordDetailActivity"
             android:exported="true"
-            android:logo="@drawable/logo"
+            android:logo="@drawable/logo_circle"
             android:label="단어">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -72,7 +78,7 @@
         <activity
             android:name=".AfterRe"
             android:exported="true"
-            android:logo="@drawable/logo"
+            android:logo="@drawable/logo_circle"
             android:label="애프터">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -106,7 +112,7 @@
         <activity
             android:name=".WordMoreActivity"
             android:exported="true"
-            android:logo="@drawable/logo"
+            android:logo="@drawable/logo_circle"
             android:label="단어">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -118,7 +124,7 @@
 
         <activity
             android:name=".TermsListActivity"
-            android:logo="@drawable/logo"
+            android:logo="@drawable/logo_circle"
             android:label="카테고리">
 
         </activity>
